// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should show itemsList result when new search value is submitted 1`] = `
<div>
  <div>
    <em>
      details: 
      React Test App, PartI
    </em>
    <form
      class="js-search-form wrapper"
    >
      <div
        class="row"
      >
        <div
          class="title"
        >
          FIND YOUR MOVIE
        </div>
        <input
          class="js-search-input input"
          type="text"
          value="Quentin Tarantino"
        />
        <input
          class="submit"
          type="submit"
          value="SEARCH"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="filter"
        >
          SEARCH BY 
          TITLE
        </div>
        <input
          checked=""
          class="js-toggle-radio-button"
          id="filterValue1"
          name="contact"
          type="radio"
          value="TITLE"
        />
        <label
          for="filterValue1"
        >
          TITLE
        </label>
        <input
          class="js-toggle-radio-button"
          id="filterValue2"
          name="contact"
          type="radio"
          value="GENRE"
        />
        <label
          for="filterValue2"
        >
          GENRE
        </label>
      </div>
    </form>
    <div
      class="result"
    >
      <div
        class="number"
      >
        2
         movies found
      </div>
      <div
        class="sort"
      >
        <div
          class="sortTitle"
        >
          SORT BY
        </div>
        <input
          checked=""
          class="js-toggle-radio-button"
          id="sv1"
          name="contact"
          type="radio"
          value="DATE"
        />
        <label
          for="sv1"
        >
          DATE
        </label>
        <input
          class="js-toggle-radio-button"
          id="sv2"
          name="contact"
          type="radio"
          value="RATING"
        />
        <label
          for="sv2"
        >
          RATING
        </label>
      </div>
    </div>
    <div
      class="list"
    >
      <div
        class="js-movie-item movie"
      >
        <a
          href="#"
        >
          <img
            class="poster"
            src="media/51fY8NCyXpL._SX342_.jpg"
          />
        </a>
        <div
          class="title"
        >
          Kill Bill-1
        </div>
        <div
          class="release"
        >
          2000
        </div>
        <div
          class="genre"
        >
          Drama
        </div>
      </div>
      <div
        class="js-movie-item movie"
      >
        <a
          href="#"
        >
          <img
            class="poster"
            src="media/51fY8NCyXpL._SX342_.jpg"
          />
        </a>
        <div
          class="title"
        >
          Kill Bill-2
        </div>
        <div
          class="release"
        >
          2002
        </div>
        <div
          class="genre"
        >
          Drama, Thriller
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App should show itemsList result when new search value is submitted 2`] = `
<div>
  <div>
    <em>
      details: 
      React Test App, PartI
    </em>
    <form
      class="js-search-form wrapper"
    >
      <div
        class="row"
      >
        <div
          class="title"
        >
          FIND YOUR MOVIE
        </div>
        <input
          class="js-search-input input"
          type="text"
          value="noMatchesRequest"
        />
        <input
          class="submit"
          type="submit"
          value="SEARCH"
        />
      </div>
      <div
        class="row"
      >
        <div
          class="filter"
        >
          SEARCH BY 
          TITLE
        </div>
        <input
          checked=""
          class="js-toggle-radio-button"
          id="filterValue1"
          name="contact"
          type="radio"
          value="TITLE"
        />
        <label
          for="filterValue1"
        >
          TITLE
        </label>
        <input
          class="js-toggle-radio-button"
          id="filterValue2"
          name="contact"
          type="radio"
          value="GENRE"
        />
        <label
          for="filterValue2"
        >
          GENRE
        </label>
      </div>
    </form>
    <div
      class="result"
    >
      <div
        class="number"
      >
        2
         movies found
      </div>
      <div
        class="sort"
      >
        <div
          class="sortTitle"
        >
          SORT BY
        </div>
        <input
          checked=""
          class="js-toggle-radio-button"
          id="sv1"
          name="contact"
          type="radio"
          value="DATE"
        />
        <label
          for="sv1"
        >
          DATE
        </label>
        <input
          class="js-toggle-radio-button"
          id="sv2"
          name="contact"
          type="radio"
          value="RATING"
        />
        <label
          for="sv2"
        >
          RATING
        </label>
      </div>
    </div>
    <div
      class="list"
    >
      <div
        class="js-movie-item movie"
      >
        <a
          href="#"
        >
          <img
            class="poster"
            src="media/51fY8NCyXpL._SX342_.jpg"
          />
        </a>
        <div
          class="title"
        >
          Kill Bill-1
        </div>
        <div
          class="release"
        >
          2000
        </div>
        <div
          class="genre"
        >
          Drama
        </div>
      </div>
      <div
        class="js-movie-item movie"
      >
        <a
          href="#"
        >
          <img
            class="poster"
            src="media/51fY8NCyXpL._SX342_.jpg"
          />
        </a>
        <div
          class="title"
        >
          Kill Bill-2
        </div>
        <div
          class="release"
        >
          2002
        </div>
        <div
          class="genre"
        >
          Drama, Thriller
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App should show movieDetails when movieItem is clicked() 1`] = `
<div>
  <div>
    <em>
      details: 
      React Test App, PartI
    </em>
    <div
      class="js-movie-details wrapper"
    >
      <img
        class="poster"
        src="media/51fY8NCyXpL._SX342_.jpg"
      />
      <div
        class="title"
      >
        Kill Bill-1
                
        <div
          class="rating"
        >
          5
        </div>
      </div>
      <div>
        Oscar winning
      </div>
      <div
        class="release"
      >
        2000
         
      </div>
      <div
        class="runtime"
      >
        154
         min
      </div>
      <div
        class="overview"
      >
         American martial arts film written and directed by Quentin Tarantino. It stars Uma Thurman as the Bride, who swears revenge on a team of assassins (Lucy Liu, Michael Madsen, Daryl Hannah, and Vivica A. Fox) and their leader, Bill (David Carradine), after they try to kill her and her unborn child. Her journey takes her to Tokyo, where she battles the yakuza.
         min
      </div>
    </div>
    <div
      class="result"
    >
      <div
        class="number"
      >
        2
         movies found
      </div>
      <div
        class="sort"
      >
        <div
          class="sortTitle"
        >
          SORT BY
        </div>
        <input
          checked=""
          class="js-toggle-radio-button"
          id="sv1"
          name="contact"
          type="radio"
          value="DATE"
        />
        <label
          for="sv1"
        >
          DATE
        </label>
        <input
          class="js-toggle-radio-button"
          id="sv2"
          name="contact"
          type="radio"
          value="RATING"
        />
        <label
          for="sv2"
        >
          RATING
        </label>
      </div>
    </div>
    <div
      class="list"
    >
      <div
        class="js-movie-item movie"
      >
        <a
          href="#"
        >
          <img
            class="poster"
            src="media/51fY8NCyXpL._SX342_.jpg"
          />
        </a>
        <div
          class="title"
        >
          Kill Bill-1
        </div>
        <div
          class="release"
        >
          2000
        </div>
        <div
          class="genre"
        >
          Drama
        </div>
      </div>
      <div
        class="js-movie-item movie"
      >
        <a
          href="#"
        >
          <img
            class="poster"
            src="media/51fY8NCyXpL._SX342_.jpg"
          />
        </a>
        <div
          class="title"
        >
          Kill Bill-2
        </div>
        <div
          class="release"
        >
          2002
        </div>
        <div
          class="genre"
        >
          Drama, Thriller
        </div>
      </div>
    </div>
  </div>
</div>
`;
